# ClusterBasedSaliency

./: CMakeLists.txt  README.md  generate_pcl_saliency.cc  segmentation_main.cc
saliency/: CMakeLists.txt  clustering_saliency_detection.cpp  clustering_saliency_detection.h  saliency_output_details.cc  saliency_output_details.h
segmentation/: CMakeLists.txt  enhanced_supervoxel_clustering.cc  enhanced_supervoxel_clustering.h  segment.h  segmentation_utils.cc  segmentation_utils.h
tools/: .gitmodules  CMakeLists.txt
tools/apps/: CMakeLists.txt  convert_format.cc  fixed_virtual_scanner.cc  generate_d2_descriptors.cc  generate_pcl_descriptors.cc  generate_pcl_filelist.cc  generate_pcl_normals.cc  generate_pcl_sampling.cc  generate_pcl_views.cc  generate_random_points.cc  mesh_viewer.cc  partitioning_main.cc  simplification_main.cc
tools/apps/mincut_partitioning/: CMakeLists.txt  segmentation.cpp  segmentation.h
tools/apps/simplification/: CMakeLists.txt  salient_based_simplification.cpp  salient_based_simplification.h
tools/display/: CMakeLists.txt  font_renderer.cc  font_renderer.h  gl_manager.cpp  gl_manager.h  gl_window.cpp  gl_window.h  glew_utils.cpp  glew_utils.h  pcl_window.cpp  pcl_window.h
tools/display/shaders/: fs.glsl  vs.glsl
tools/experiments/: CMakeLists.txt  convert_shapeset_clusters.cc
tools/features/: CMakeLists.txt  descriptors.cc  descriptors.h  gabor.cc  gabor.h  normals.cc  normals.h
tools/features/sihks/: CMakeLists.txt  eigendecomposition.cpp  eigendecomposition.h  generate_lpmatrix.h  hks.cc  hks.h
tools/features/sihks/Eigen3ArpackSupport/src/Eigenvalues/: ArpackSelfAdjointEigenSolver.h
tools/io/: CMakeLists.txt  off_io.cc  off_io.h  psb_classification.cpp  psb_classification.h
tools/utils/: CMakeLists.txt  cgal_utils.cpp  cgal_utils.h  cmd_parser.cc  cmd_parser.h  cmd_parser_main.cc  color_gradient.h  dist_utils.h  eigen3_utils.cpp  eigen3_utils.h  flann_utils.h  he_mesh.h  matrix_io.h  pcl_utils.cc  pcl_utils.h  shading_utils.cc  shading_utils.h
